# wasmtime

./: .#Cargo.toml  .azure-pipelines.yml  .cirrus.yml  .clang-format  .editorconfig  .gitattributes  .gitignore  .gitmodules  .rustfmt.toml  .travis.yml  404.html  ADOPTERS.md  AGENTS.md  CNAME  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  FUZZING.md  LICENSE.cloudabi-utils  README.md  README.rst  RELEASES.md  SECURITY.md  TODO  appveyor.yml  assertion_failed__left_eq_right.wasm  book.toml  build.rs  check-clippy.sh  check-rustfmt.sh  cli-cache.html  cli-install.html  cli-logging.html  cli-options.html  cli.html  clippy-all.sh  clippy.toml  contributing-architecture.html  contributing-building.html  (+83 more)
cranelift/: .gitignore  CONTRIBUTING.md  Cargo.toml  FUZZING.md  README.md  foo.clif  format-all.sh  howtouse.txt  notes  out.clif  out.spv  publish-all.sh  run-souper.sh  rustc.md  test-all.sh  test-no_std.sh  test-zk.sh  test.clif  test.spv
cranelift-codegen/meta/: Cargo.toml
cranelift-entity/: Cargo.toml
cranelift-entity/src/: boxed_slice.rs  iter.rs  lib.rs  list.rs  map.rs  primary.rs  set.rs
cranelift-faerie/: Cargo.toml
cranelift-faerie/src/: backend.rs  lib.rs  traps.rs
cranelift-native/: Cargo.toml
cranelift-native/src/: lib.rs
cranelift-simplejit/: Cargo.toml  README.md
cranelift-simplejit/examples/: simplejit-minimal.rs
cranelift-simplejit/src/: backend.rs  lib.rs  memory.rs
cranelift-simplejit/tests/: basic.rs
cranelift-wasm/: Cargo.toml  README.md
cranelift-wasm/src/: code_translator.rs  func_translator.rs  lib.rs  module_translator.rs  sections_translator.rs  state.rs  translation_utils.rs
cranelift-wasm/tests/: wasm_testsuite.rs
cranelift/.github/: pull_request_template.md
cranelift/assembler-x64/: Cargo.toml  README.md  build.rs
cranelift/bforest/: Cargo.toml
cranelift/bitset/: Cargo.toml
cranelift/chaos/: Cargo.toml
cranelift/ci/: fuzzit.sh
cranelift/codegen/: Cargo.toml  README.md  build.rs
cranelift/control/: Cargo.toml  README.md
cranelift/data/: add.zkasm  add_func.zkasm  add_memory.zkasm  counter.zkasm  fibonacci.zkasm  fibonacci_recursive.zkasm  gen.sh  locals.zkasm  locals_simple.zkasm
cranelift/docs/: Makefile  add-a-clif-instruction.md  add-clif-instruction.md  add-machine-instruction.md  add-new-backend.md  backend-architecture.md  callex.clif  callex.cton  clif_domain.py  clif_lexer.py  compare-llvm.md  compare-llvm.rst  conf.py  cton_domain.py  cton_lexer.py  debugging-codegen.md  example.c  example.clif  example.cton  heap.dot  heapex-dyn.clif  heapex-sm32.clif  heapex-sm32.cton  heapex-sm64.clif  heapex-sm64.cton  index.md  index.rst  ir.md  ir.rst  isle-integration.md  isle-verification-notes.md  isle.md  langref.rst  make.bat  meta.rst  metaref.rst  regalloc.md  regalloc.rst  regalloc2-integration.md  stack-maps.md  (+2 more)
cranelift/egraph/: Cargo.toml
cranelift/entity/: Cargo.toml
cranelift/faerie/: Cargo.toml  README.md
cranelift/filetests/: Cargo.toml  README.md  rustfmt.toml
cranelift/frontend/: Cargo.toml  README.md
cranelift/fuzz/: Cargo.toml  fuzz_reader_parse_test.rs  fuzz_translate_module.rs
cranelift/fuzzgen/: Cargo.toml  README.md
cranelift/interpreter/: Cargo.toml  README.md
cranelift/isle/: .gitignore  .gitmodules  Cargo.toml  README.md  TODO
cranelift/jit/: Cargo.toml  README.md
cranelift/llvm/: Cargo.toml
cranelift/module/: Cargo.toml  README.md
cranelift/native/: Cargo.toml  README.md
cranelift/object/: Cargo.toml  README.md
cranelift/peepmatic/: Cargo.toml  README.md
cranelift/preopt/: Cargo.toml  README.md
cranelift/reader/: Cargo.toml  README.md
cranelift/serde/: Cargo.toml  README.md
cranelift/simplecompiler/: Cargo.toml
cranelift/simplejit/: Cargo.toml  README.md
cranelift/src/: bugpoint.rs  bugpoint_test.clif  cat.rs  clif-util.rs  compile.rs  cton-util.rs  disasm.rs  interpret.rs  print_cfg.rs  rsfilecheck.rs  run.rs  souper_harvest.rs  souper_to_peepmatic.rs  test-all.sh  utils.rs  wasm.rs
cranelift/srcgen/: Cargo.toml
cranelift/tests/: bugpoint_consts.clif  bugpoint_consts_expected.clif  bugpoint_test.clif  bugpoint_test_expected.clif  cfg_traversal.rs  filetests.rs  logged-filetests.rs
cranelift/umbrella/: Cargo.toml
cranelift/wasm/: Cargo.toml  README.md
cranelift/wasm-types/: Cargo.toml
cranelift/wasmtests/: br_table.wat  embenchen_fasta.wat  icall.wast  if-reachability-translation-5.wat  memory.wat  multi-7.wat  multi-9.wat  nullref.wat  passive-data.wat  pr2559.wat  ref-func-0.wat  select.wat  simd.wat  unreachable_code.wat
cranelift/zkasm_data/: _should_fail_unreachable.wat  add.wat  add_func.wat  add_memory.wat  and.wat  counter.wat  div.wat  eqz.wat  fibonacci.wat  i32_const.wat  i64_const.wat  i64_div.wat  i64_mul.wat  locals.wat  locals_simple.wat  lt_s.wat  lt_u.wat  mul.wat  ne.wat  nop.wat  or.wat  rem.wat  xor.wat
examples/: CMakeLists.txt  README.md  anyref.c  anyref.cc  anyref.rs  anyref.wat  async.cc  async.cpp  async.wat  coredump.rs  deserialize.rs  epochs.rs  externref.c  externref.cc  externref.rs  externref.wat  fast_compilation.rs  fast_execution.rs  fast_instantiation.rs  fuel.c  fuel.cc  fuel.rs  fuel.wat  gcd.c  gcd.cc  gcd.rs  gcd.wat  hello.c  hello.cc  hello.rs  interrupt.c  interrupt.cc  interrupt.rs  interrupt.wat  linking.c  linking.cc  linking.rs  linking1.wat  linking2.wat  memory.c  (+24 more)
fuzz/: Cargo.toml  README.md  build.rs  fuzz_reader_parse_test.rs  fuzz_translate_module.rs
host/: Cargo.toml  build.rs
lightbeam/: Cargo.toml
pulley/: CONTRIBUTING.md  Cargo.toml  README.md  build.rs
wasi-common/: Cargo.toml  README.md  build.rs
wasmtime-api/: Cargo.toml
wasmtime-debug/: Cargo.toml
wasmtime-environ/: Cargo.toml  README.md
wasmtime-hostmodule/: Cargo.toml
wasmtime-interface-types/: Cargo.toml  README.md
wasmtime-jit/: Cargo.toml
wasmtime-obj/: Cargo.toml
wasmtime-runtime/: Cargo.toml  build.rs
wasmtime-wasi/: Cargo.toml  README.md  build.rs
wasmtime-wasi-c/: Cargo.toml
wasmtime-wast/: Cargo.toml
winch/: Cargo.toml  README.md
winx/: Cargo.toml
(+28328 files in other folders)
